# habit-api

./: .env  .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
drf/: celerybeat-schedule
drf/auth_user/: managers.py  models.py  serializers.py  urls.py  views.py
drf/auth_user/migrations/: 0001_initial.py
drf/drf/: celery.py  settings.py  urls.py
drf/habit/: models.py  serializers.py  urls.py  views.py
drf/habit/migrations/: 0001_initial.py  0002_habit_user.py  0003_alter_habit_options_alter_habitlog_options_and_more.py
drf/repository/: HabitRepository.py
drf/services/: PeriodicityReminder.py
drf/tasks/: habit_task.py
drf/utils/: custom_router.py
